--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps_flutter: ^2.1.1
   geolocator: ^8.2.1
   cached_network_image: ^3.2.1
+  flutter_pos_printer_platform:
+  printing: ^5.9.3
 
 dev_dependencies:
   flutter_test:
