--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   get: ^4.6.1
   shared_preferences: ^2.0.6
   connectivity: ^3.0.6
-  firebase_core: ^1.2.1
-  firebase_messaging: ^11.2.4
-  flutter_local_notifications: ^9.5.3+1
+  firebase_core: ^2.4.1
+  firebase_messaging: ^14.2.1
+  flutter_local_notifications: ^13.0.0
   path_provider: ^2.0.2
   url_strategy: ^0.2.0
   shimmer_animation: ^2.0.0
@@ -26,24 +26,30 @@ dependencies:
   http: ^0.13.3
   pin_code_fields: ^7.2.0
   url_launcher: ^6.1.2
-  vibration: 1.7.4-nullsafety.0
+  vibration: ^1.7.6
   audioplayers: ^0.20.1
   flutter_switch: ^0.3.2
   flutter_typeahead: ^4.0.0
-  phone_number: ^0.12.0+1
+  phone_number: ^1.0.0
   country_code_picker: ^2.0.2
-  flutter_html: ^2.2.1
+  flutter_html: ^3.0.0-alpha.6
   bluetooth_thermal_printer: ^0.0.6
-  esc_pos_utils: ^1.0.0
-  photo_view: ^0.13.0
+  photo_view: ^0.14.0
   image_compression_flutter: ^1.0.2
-  win32: ^2.6.1
-  modal_bottom_sheet: ^2.0.1
+  win32: ^3.1.3
+  modal_bottom_sheet: ^2.1.2
   google_maps_flutter: ^2.1.1
-  geolocator: ^8.2.1
+  geolocator: ^9.0.2
   cached_network_image: ^3.2.1
-  flutter_pos_printer_platform:
-  printing: ^5.9.3
+  flutter_pos_printer_platform: ^1.0.12
+  esc_pos_utils: ^1.1.0
+  screenshot: ^1.2.3
+
+dependency_overrides:
+  modal_bottom_sheet:
+    git:
+      url: https://github.com/danReynolds/modal_bottom_sheet.git
+      path: modal_bottom_sheet
 
 dev_dependencies:
   flutter_test:
