--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,10 @@
 	<string>Need BLE permission for getting printers</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Need BLE permission for getting printers</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Need Location permission for print invoice</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Need Location permission for print invoice</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app requires access to the camera to upload user profile picture.</string>
 	<key>NSMicrophoneUsageDescription</key>
@@ -40,6 +44,8 @@
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -62,5 +68,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
 </dict>
 </plist>
